protocols/session/src/socket/snapshots/hopr_protocol_session__socket__tests__stateless_socket_bidirectional_should_work-2.snap
---
source: protocols/session/src/socket/mod.rs
expression: bob_tracker
---
frames_emitted: 39
frames_completed: 39
frames_discarded: 0
incomplete_frames: 0
errors: 0
incoming_messages_Segment: 39
incoming_messages_Request: 0
incoming_messages_Acknowledge: 0
outgoing_messages_Segment: 39
outgoing_messages_Request: 0
outgoing_messages_Acknowledge: 0
