protocols/session/src/socket/snapshots/hopr_protocol_session__socket__tests__stateless_socket_bidirectional_should_work.snap
---
source: protocols/session/src/socket/mod.rs
expression: alice_tracker
---
frames_emitted: 37
frames_completed: 37
frames_discarded: 0
incomplete_frames: 0
errors: 0
incoming_messages_Segment: 37
incoming_messages_Request: 0
incoming_messages_Acknowledge: 0
outgoing_messages_Segment: 37
outgoing_messages_Request: 0
outgoing_messages_Acknowledge: 0
